--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - uses: jakejarvis/hugo-build-action@0.88.1
+      - uses: jakejarvis/hugo-build-action@v0.88.1
         with:
           args: --minify --buildDrafts --source ./redis-stack-website
       - name: Build website
