--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Prepare website
         run: make prepare
       - name: Get Hugo
-        run: wget https://github.com/gohugoio/hugo/releases/download/v0.88.1/hugo_extended_0.88.1_Linux-64bit.deb; dpkg -i hugo_extended_0.88.1_Linux-64bit.deb
+        run: wget https://github.com/gohugoio/hugo/releases/download/v0.88.1/hugo_extended_0.88.1_Linux-64bit.deb; sudo dpkg -i hugo_extended_0.88.1_Linux-64bit.deb
       - name: Install stuff
         run: cd redis-stack-website; npm install
       - name: Run Hugo
