--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,8 @@
 name: Deploy website
 on:
+  push:
+    branches:
+      - 'master'
   repository_dispatch:
     types: [source-updated]
 jobs:
@@ -15,9 +18,9 @@ jobs:
       - name: Get Hugo
         run: wget https://github.com/gohugoio/hugo/releases/download/v0.88.1/hugo_extended_0.88.1_Linux-64bit.deb; sudo dpkg -i hugo_extended_0.88.1_Linux-64bit.deb
       - name: Install stuff
-        run: cd redis-stack-website; npm install
+        run: cd website; npm install
       - name: Run Hugo
-        run: hugo --source ./redis-stack-website --gc --minify
+        run: hugo --source ./website --gc --minify
       - uses: jakejarvis/s3-sync-action@master
         with:
           args: --acl public-read --follow-symlinks
