--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,12 +13,12 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Prepare website
-        run: make prepare
       - name: Get Hugo
         run: wget https://github.com/gohugoio/hugo/releases/download/v0.88.1/hugo_extended_0.88.1_Linux-64bit.deb; sudo dpkg -i hugo_extended_0.88.1_Linux-64bit.deb
       - name: Install stuff
         run: cd website; npm install
+      - name: Prepare website
+        run: make init stack
       - name: Run Hugo
         run: hugo --source ./website --gc --minify
       - uses: jakejarvis/s3-sync-action@master
