--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,4 +29,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           DEST_DIR: ${{ secrets.AWS_S3_DIR }}
-          SOURCE_DIR: 'redis-stack-website/public'
+          SOURCE_DIR: 'website/public'
