Add all redis-stack modules

--- a/redis_stack_components.json
+++ b/redis_stack_components.json
@@ -10,8 +10,56 @@
         "name": "RedisJSON",
         "type": "module",
         "module": "ReJSON",
-        "description": "JSON data type",
+        "description": "JSON data structure",
         "git_url": "https://github.com/redisjson/redisjson",
+        "docs_path": "docs",
+        "docs_branch": "master",
+        "docs_branch_postfix": "-newdocs",
+        "release_tag_regex": "v[0-9]+\\.[0-9]+.[0-9]+",
+        "exclude_tag_regexes": []
+    },
+    {
+        "name": "RediSearch",
+        "type": "module",
+        "module": "search",
+        "description": "Redis Secondary Index & Query Engine",
+        "git_url": "https://github.com/redisearch/redisearch",
+        "docs_path": "docs",
+        "docs_branch": "master",
+        "docs_branch_postfix": "-newdocs",
+        "release_tag_regex": "v[0-9]+\\.[0-9]+.[0-9]+",
+        "exclude_tag_regexes": []
+    },
+    {
+        "name": "RedisGraph",
+        "type": "module",
+        "module": "graph",
+        "description": "Queryable Property Graph database",
+        "git_url": "https://github.com/redisgraph/redisgraph",
+        "docs_path": "docs",
+        "docs_branch": "master",
+        "docs_branch_postfix": "-newdocs",
+        "release_tag_regex": "v[0-9]+\\.[0-9]+.[0-9]+",
+        "exclude_tag_regexes": []
+    },
+    {
+        "name": "RedisTimeSeries",
+        "type": "module",
+        "module": "timeseries",
+        "description": "Time Series data structure",
+        "git_url": "https://github.com/redistimeseries/redistimeseries",
+        "docs_path": "docs",
+        "docs_branch": "master",
+        "docs_branch_postfix": "-newdocs",
+        "release_tag_regex": "v[0-9]+\\.[0-9]+.[0-9]+",
+        "exclude_tag_regexes": []
+    },
+    {
+        "name": "RedisBloom",
+        "type": "module",
+        "module": "bf",
+        "description": "Probabilistic Data Structures",
+        "git_url": "https://github.com/redisbloom/redisbloom",
         "docs_path": "docs",
         "docs_branch": "master",
         "docs_branch_postfix": "-newdocs",
