--- a/redis_stack_components.json
+++ b/redis_stack_components.json
@@ -19,6 +19,18 @@
         "exclude_tag_regexes": []
     },
     {
+        "name": "RedisGraph",
+        "type": "module",
+        "module": "graph",
+        "description": "Queryable Property Graph database",
+        "git_url": "https://github.com/redisgraph/redisgraph",
+        "docs_path": "docs",
+        "docs_branch": "master",
+        "docs_branch_postfix": "-newdocs",
+        "release_tag_regex": "v[0-9]+\\.[0-9]+.[0-9]+",
+        "exclude_tag_regexes": []
+    },
+    {
         "name": "RediSearch",
         "type": "module",
         "module": "search",
