--- a/redis_stack_components.json
+++ b/redis_stack_components.json
@@ -12,6 +12,7 @@
         "module": "ReJSON",
         "description": "JSON data structure",
         "git_url": "https://github.com/redisjson/redisjson",
+        "docs_git_url": "https://github.com/redisjson/redisjson",
         "docs_path": "docs",
         "docs_branch": "master",
         "docs_branch_postfix": "-newdocs",
@@ -24,6 +25,7 @@
         "module": "search",
         "description": "Redis Secondary Index & Query Engine",
         "git_url": "https://github.com/redisearch/redisearch",
+        "docs_git_url": "https://github.com/redisearch/redisearch",
         "docs_path": "docs",
         "docs_branch": "master",
         "docs_branch_postfix": "-newdocs",
@@ -36,6 +38,7 @@
         "module": "graph",
         "description": "Queryable Property Graph database",
         "git_url": "https://github.com/redisgraph/redisgraph",
+        "docs_git_url": "https://github.com/redisgraph/redisgraph",
         "docs_path": "docs",
         "docs_branch": "master",
         "docs_branch_postfix": "-newdocs",
@@ -48,6 +51,7 @@
         "module": "timeseries",
         "description": "Time Series data structure",
         "git_url": "https://github.com/redistimeseries/redistimeseries",
+        "docs_git_url": "https://github.com/redistimeseries/redistimeseries",
         "docs_path": "docs",
         "docs_branch": "master",
         "docs_branch_postfix": "-newdocs",
@@ -60,6 +64,7 @@
         "module": "bf",
         "description": "Probabilistic Data Structures",
         "git_url": "https://github.com/redisbloom/redisbloom",
+        "docs_git_url": "https://github.com/redisbloom/redisbloom",
         "docs_path": "docs",
         "docs_branch": "master",
         "docs_branch_postfix": "-newdocs",
