--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "redis-stack-website"]
 	path = website
 	url = https://github.com/redis/redis-website
+[submodule "themes/docsy"]
+	path = themes/docsy
+	url = https://github.com/google/docsy.git
+[submodule "themes/redis"]
+	path = themes/redis
+	url = https://github.com/redis/redis-website.git
