--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,8 @@ jobs:
         run: npm install
       - name: Prepare website
         run: make init all
+        env:
+          PRIVATE_REPOS_PAT: ${{ secrets.PRIVATE_REPOS_PAT }}
       - name: Generate website
         run: hugo --gc --minify
       - uses: jakejarvis/s3-sync-action@master
