--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,13 +13,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Get Hugo
-        run: wget https://github.com/gohugoio/hugo/releases/download/v0.88.1/hugo_extended_0.88.1_Linux-64bit.deb; sudo dpkg -i hugo_extended_0.88.1_Linux-64bit.deb
-      - name: Install apt packages
-        run: sudo apt update; sudo apt install -y rsync
-      - name: Install npm packages
-        run: npm install
-      - name: Prepare website
+      - name: Build website
         run: make init all
         env:
           PRIVATE_REPOS_PAT: ${{ secrets.PRIVATE_REPOS_PAT }}
