--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-node_modules/
+node_modules/**
+venv/**
 
 # vim temporary files
 *~
@@ -11,6 +12,7 @@ node_modules/
 .idea
 .vscode
 
+# Files copied pr generated during build
 data/groups.json
 data/commands.json
 static/css/cli.css
