--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.8",
     "postcss-cli": "^9.1.0"
+  },
+  "dependencies": {
+    "package-lock.json": "^1.0.0"
   }
 }
