--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,9 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - run: apt-get update -qq
-      - run: apt-get install -y ca-certificates wget curl git rsync python3 python3-pip
+      - run: sudo apt-get install -y ca-certificates wget curl git rsync python3 python3-pip
       - run: wget -q -O /tmp/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VER}/hugo_extended_${HUGO_VER}_Linux-64bit.deb
-      - run: dpkg -i /tmp/hugo.deb
+      - run: sudo dpkg -i /tmp/hugo.deb
       - run: npm install
       - run: make all
         env:
