--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           submodules: true
       - run: sudo apt-get install -y ca-certificates wget curl git rsync python3 python3-pip
-      - run: wget -q -O /tmp/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VER}/hugo_extended_${HUGO_VER}_Linux-64bit.deb
+      - run: wget -q -O /tmp/hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.88.1/hugo_extended_0.88.1_Linux-64bit.deb
       - run: sudo dpkg -i /tmp/hugo.deb
       - run: npm install
       - run: make all
