--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,9 +13,11 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
+      - run: sudo apt-get update -qq
       - run: sudo apt-get install -y ca-certificates wget curl git rsync python3 python3-pip
       - run: wget -q -O /tmp/hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.88.1/hugo_extended_0.88.1_Linux-64bit.deb
       - run: sudo dpkg -i /tmp/hugo.deb
+      - run: pip install -r build/requirements.txt
       - run: npm install
       - run: make all
         env:
