--- a/.dockerignore
+++ b/.dockerignore
@@ -12,7 +12,9 @@ venv
 .idea
 .vscode
 
-# Files copied pr generated during build
+bin/htmltest
+
+# Files copied or generated during build
 data/groups.json
 data/commands.json
 static/css/cli.css
@@ -20,3 +22,4 @@ static/js/cli.js
 content/**
 public/**
 resources/**
+tmp/**
