--- a/.gitignore
+++ b/.gitignore
@@ -15,14 +15,11 @@ venv/**
 /bin/htmltest
 
 # Files copied or generated during build
-data/clients.json
 data/commands.json
 data/groups.json
+data/repos.json
 data/languages.json
-data/libraries.json
-data/modules.json
 data/tool_types.json
-data/tools.json
 public/**
 resources/**
 tmp/**
