--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
         env:
           PRIVATE_REPOS_PAT: ${{ secrets.PRIVATE_REPOS_PAT }}
           GITHUB_TOKEN: ${{ secrets.PRIVATE_REPOS_PAT }}
+          ENV: production
       - name: Run htmltest
         continue-on-error: true
         run: curl https://htmltest.wjdp.uk | bash; ./bin/htmltest -s public
