--- a/config.toml
+++ b/config.toml
@@ -67,10 +67,8 @@ resampleFilter = "CatmullRom"
 quality = 75
 anchor = "smart"
 
-[services]
-[services.googleAnalytics]
-# Comment out the next line to disable GA tracking. Also disables the feature described in [params.ui.feedback].
-id = "UA-00000000-0"
+[params]
+  tagManagerId = "GTM-T4MTBKP"
 
 # Language configuration
 
