--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,21 +13,16 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - run: sudo apt-get update -qq
-      - run: sudo apt-get install -y ca-certificates wget curl git rsync python3 python3-pip
-      - run: wget -q -O /tmp/hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.88.1/hugo_extended_0.88.1_Linux-64bit.deb
-      - run: sudo dpkg -i /tmp/hugo.deb
-      - run: pip install -r build/requirements.txt
-      - run: npm install
-      - run: make all
+      - name: Make the stack
+        run: make docker-build
         env:
-          PRIVATE_REPOS_PAT: ${{ secrets.PRIVATE_REPOS_PAT }}
-          GITHUB_TOKEN: ${{ secrets.PRIVATE_REPOS_PAT }}
+          PRIVATE_ACCESS_TOKEN: ${{ secrets.PRIVATE_ACCESS_TOKEN }}
           ENV: production
       - name: Run htmltest
         continue-on-error: true
         run: curl https://htmltest.wjdp.uk | bash; ./bin/htmltest -s public
-      - uses: jakejarvis/s3-sync-action@master
+      - name: Upload to AWS S3
+        uses: jakejarvis/s3-sync-action@master
         with:
           args: --acl public-read --follow-symlinks
         env:
@@ -36,3 +31,11 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           DEST_DIR: ${{ secrets.AWS_S3_DIR }}
           SOURCE_DIR: 'public'
+      - name: Invalidate AWS CloudFront
+        uses: chetan/invalidate-cloudfront-action@v2\
+        with:
+            DISTRIBUTION: ${{ secrets.AWS_CF_DISTRIBUTION }}
+            PATHS: "/*"
+            AWS_REGION: "us-east-1"
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
