--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,8 +15,8 @@ jobs:
           submodules: true
       - name: Install deps
         run: \
-          apt-get update -qq; \
-          apt-get install -y ca-certificates wget curl git rsync python3 python3-pip; \
+          sudo apt-get update -qq; \
+          sudo apt-get install -y ca-certificates wget curl git rsync python3 python3-pip; \
           wget -q -O /tmp/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VER}/hugo_extended_${HUGO_VER}_Linux-64bit.deb; \
           dpkg -i /tmp/hugo.deb; \
           npm install; \
