--- a/netlify.toml
+++ b/netlify.toml
@@ -2,5 +2,4 @@
   command = "make all"
   publish = "public"
   [context.production.environment]
-    ENV = "development"
-    
+    ENV = "production"
