--- a/netlify.toml
+++ b/netlify.toml
@@ -3,12 +3,12 @@
   publish = "public"
   [context.production.environment]
     ENV = "production"
-    PYTHON_VERSION = 3.8
-    RUBY_VERSION = 2.7.2
+    PYTHON_VERSION = "3.8"
+    RUBY_VERSION = "2.7.2"
 
 [context.development]
   command = "make all"
   publish = "public"
   [context.development.environment]
-    PYTHON_VERSION = 3.8
-    RUBY_VERSION = 2.7.2
+    PYTHON_VERSION = "3.8"
+    RUBY_VERSION = "2.7.2"
