--- a/netlify.toml
+++ b/netlify.toml
@@ -21,3 +21,11 @@
     ENV = "development"
     PYTHON_VERSION = "3.8"
     RUBY_VERSION = "2.7.2"
+
+[context.preview]
+  command = "make netlify"
+  publish = "public"
+  [context.preview.environment]
+    ENV = "preview"
+    PYTHON_VERSION = "3.8"
+    RUBY_VERSION = "2.7.2"
