--- a/.github/workflows/linkchecks.yml
+++ b/.github/workflows/linkchecks.yml
@@ -21,4 +21,5 @@ jobs:
         id: lychee
         uses: lycheeverse/lychee-action@v1.5.0
         with:
+          fail: true
           args: './public -c lychee.toml'
