--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "private": true,
   "devDependencies": {
-    "autoprefixer": "^10.4.4",
+    "@tailwindcss/typography": "^0.5.2",
+    "autoprefixer": "^10.4.7",
     "postcss": "^8.4.12",
-    "postcss-cli": "^9.1.0"
+    "postcss-cli": "^9.1.0",
+    "postcss-import": "^14.1.0",
+    "tailwindcss": "^3.0.24"
   }
 }
