--- a/config.toml
+++ b/config.toml
@@ -83,18 +83,81 @@ section = ["HTML", "RSS"] # print
     identifier = "get-started"
     name = "Get Started"
     weight = 1
+    columns = 2
   [[menu.main]]
     identifier = "redis"
     name = "Redis"
-    url = "/docs/getting-started/"
+    url = "/docs/about/"
+    pre = "icons/redis-cube.svg"
     parent = "get-started"
     weight = 1
   [[menu.main]]
+    identifier = "redis-get-started"
+    name = "Get Started"
+    url = "/docs/getting-started/"
+    parent = "redis"
+    weight = 1
+  [[menu.main]]
+    identifier = "data-types"
+    name = "Data Types"
+    url = "/docs/manual/data-types/"
+    parent = "redis"
+    weight = 2
+  [[menu.main]]
+    identifier = "redis-cli"
+    name = "Redis CLI"
+    url = "/docs/manual/cli/"
+    parent = "redis"
+    weight = 3
+  [[menu.main]]
+    identifier = "persistence"
+    name = "Persistence"
+    url = "/docs/manual/persistence/"
+    parent = "redis"
+    weight = 4
+  [[menu.main]]
+    identifier = "scaling"
+    name = "Scaling"
+    url = "/docs/manual/scaling/"
+    parent = "redis"
+    weight = 5
+  [[menu.main]]
     identifier = "redis-stack"
     name = "Redis Stack"
-    url = "/docs/stack/get-started/"
+    url = "/docs/stack/"
+    pre = "icons/stack-icon.svg"
     parent = "get-started"
     weight = 2
+  [[menu.main]]
+    identifier = "stack-get-started"
+    name = "Get Started"
+    url = "/docs/stack/get-started/"
+    parent = "redis-stack"
+    weight = 1
+  [[menu.main]]
+    identifier = "stack-clients"
+    name = "Stack Clients"
+    url = "/docs/stack/get-started/clients/"
+    parent = "redis-stack"
+    weight = 2
+  [[menu.main]]
+    identifier = "insight"
+    name = "RedisInsight"
+    url = "/docs/stack/insight/"
+    parent = "redis-stack"
+    weight = 3
+  [[menu.main]]
+    identifier = "json"
+    name = "JSON"
+    url = "/docs/stack/json/"
+    parent = "redis-stack"
+    weight = 4
+  [[menu.main]]
+    identifier = "time-series"
+    name = "Time Series"
+    url = "/docs/stack/timeseries/"
+    parent = "redis-stack"
+    weight = 5
   [[menu.main]]
     identifier = "docs"
     name = "Docs"
