--- a/config.toml
+++ b/config.toml
@@ -2,18 +2,12 @@ baseURL = "/"
 title = "Redis"
 
 enableRobotsTXT = true
-
-# Hugo allows theme composition (and inheritance). The precedence is from left to right.
-# theme = []
-
-# Will give values to .Lastmod etc.
 enableGitInfo = true
+enableEmoji = true
 
-# Language settings
 contentDir = "content/en"
 defaultContentLanguage = "en"
 defaultContentLanguageInSubdir = true
-# Useful when translating.
 enableMissingTranslationPlaceholders = true
 
 [related]
@@ -66,6 +60,8 @@ weight = 1
   [markup.goldmark]
     [markup.goldmark.renderer]
       unsafe = true
+    [markup.goldmark.extensions]
+#      typographer = false
   [markup.highlight]
       # See a complete list of available styles at https://xyproto.github.io/splash/docs/all.html
       style = "tango"
