--- a/config.toml
+++ b/config.toml
@@ -61,7 +61,7 @@ weight = 1
     [markup.goldmark.renderer]
       unsafe = true
     [markup.goldmark.extensions]
-#      typographer = false
+      typographer = false
   [markup.highlight]
       # See a complete list of available styles at https://xyproto.github.io/splash/docs/all.html
       style = "tango"
