--- a/config.toml
+++ b/config.toml
@@ -2,18 +2,12 @@ baseURL = "/"
 title = "Redis"
 
 enableRobotsTXT = true
-
-# Hugo allows theme composition (and inheritance). The precedence is from left to right.
-# theme = []
-
-# Will give values to .Lastmod etc.
 enableGitInfo = true
+enableEmoji = true
 
-# Language settings
 contentDir = "content/en"
 defaultContentLanguage = "en"
 defaultContentLanguageInSubdir = true
-# Useful when translating.
 enableMissingTranslationPlaceholders = true
 
 [related]
@@ -66,6 +60,8 @@ weight = 1
   [markup.goldmark]
     [markup.goldmark.renderer]
       unsafe = true
+    [markup.goldmark.extensions]
+      typographer = false
   [markup.highlight]
       # See a complete list of available styles at https://xyproto.github.io/splash/docs/all.html
       style = "tango"
@@ -81,7 +77,7 @@ section = ["HTML", "RSS"] # print
 [menu]
   [[menu.main]]
     identifier = "get-started"
-    name = "Get Started"
+    name = "GET STARTED"
     weight = 1
     columns = 2
   [[menu.main]]
@@ -160,17 +156,17 @@ section = ["HTML", "RSS"] # print
     weight = 5
   [[menu.main]]
     identifier = "docs"
-    name = "Docs"
+    name = "DOCS"
     url = "/docs/"
     weight = 2
   [[menu.main]]
     identifier = "commands"
-    name = "Commands"
+    name = "COMMANDS"
     url = "/commands/"
     weight = 3
   [[menu.main]]
     identifier = "resources"
-    name = "Resources"
+    name = "RESOURCES"
     weight = 4
   [[menu.main]]
     identifier = "resource-download"
@@ -192,7 +188,7 @@ section = ["HTML", "RSS"] # print
     weight = 3
   [[menu.main]]
     identifier = "community"
-    name = "Community"
+    name = "COMMUNITY"
     url = "/community/"
     weight = 5
   [[menu.buttons]]
