--- a/config.toml
+++ b/config.toml
@@ -64,7 +64,7 @@ weight = 1
       typographer = false
   [markup.highlight]
       # See a complete list of available styles at https://xyproto.github.io/splash/docs/all.html
-      style = "tango"
+      style = "github-dark"
       # Uncomment if you want your chosen highlight style used for code blocks without a specified language
       # guessSyntax = "true"
 
