--- a/config.toml
+++ b/config.toml
@@ -17,13 +17,10 @@ enableMissingTranslationPlaceholders = true
   includeNewer = true
 
 # Highlighting config
-pygmentsCodeFences = true
+pygmentsCodeFences = false
 pygmentsUseClasses = false
 # Use the new Chroma Go highlighter in Hugo.
 pygmentsUseClassic = false
-#pygmentsOptions = "linenos=table"
-# See https://help.farbox.com/pygments.html
-pygmentsStyle = "tango"
 
 # Configure how URLs look like per section.
 [permalinks]
@@ -64,7 +61,8 @@ weight = 1
       typographer = false
   [markup.highlight]
       # See a complete list of available styles at https://xyproto.github.io/splash/docs/all.html
-      style = "github-dark"
+      # style = "github-dark"
+      noClasses = "false"
       # Uncomment if you want your chosen highlight style used for code blocks without a specified language
       # guessSyntax = "true"
 
