--- a/config.toml
+++ b/config.toml
@@ -41,6 +41,8 @@ anchor = "smart"
 
 [params]
   tagManagerId = "GTM-T4MTBKP"
+  # Display and sort order for client examples
+  clientsExamples = ["Python", "JavaScript"]
 
 # Language configuration
 
