--- a/config.toml
+++ b/config.toml
@@ -143,7 +143,7 @@ section = ["HTML", "RSS"] # print
   [[menu.main]]
     identifier = "insight"
     name = "RedisInsight"
-    url = "/docs/stack/insight/"
+    url = "/docs/ui/insight/"
     parent = "redis-stack"
     weight = 3
   [[menu.main]]
