--- a/config.toml
+++ b/config.toml
@@ -42,7 +42,7 @@ anchor = "smart"
 [params]
   tagManagerId = "GTM-T4MTBKP"
   # Display and sort order for client examples
-  clientsExamples = ["Python", "Node", "Java", "Go"]
+  clientsExamples = ["Python", "Node", "Java", "Go", "C#"]
 
 # Language configuration
 
