Improve examples parser and short code (#99)

--- a/config.toml
+++ b/config.toml
@@ -41,6 +41,8 @@ anchor = "smart"
 
 [params]
   tagManagerId = "GTM-T4MTBKP"
+  # Display and sort order for client examples
+  clientsExamples = ["C#", "Go", "Java", "Node.js", "Python"]
 
 # Language configuration
 
