--- a/config.toml
+++ b/config.toml
@@ -231,7 +231,7 @@ section = ["HTML", "RSS"] # print
   [[menu.buttons]]
     identifier = "try-free"
     name = "Try Redis Cloud"
-    url = "http://redis.com/try-free/"
+    url = "https://redis.com/try-free/?utm_source=redisio&utm_medium=referral&utm_campaign=2023-09-try_free&utm_content=cu-redis_cloud_users"
     weight = 2
     [menu.buttons.params]
       style = "outline"
